<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/city"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="@id/item_image" />

    <TextView
        android:id="@+id/curr_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/curr_population"
        app:layout_constraintBottom_toBottomOf="@id/item_image"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/item_title" />

    <TextView
        android:id="@+id/item_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_11111"
        app:layout_constraintBottom_toBottomOf="@id/item_image"
        app:layout_constraintStart_toEndOf="@id/curr_population"
        app:layout_constraintTop_toBottomOf="@id/item_title" />

    <ImageView
        android:id="@+id/item_visibility"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/outline_visibility_black_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="#ffbcbc"
        app:layout_constraintTop_toBottomOf="@id/item_image" />
</androidx.constraintlayout.widget.ConstraintLayout>