<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.citynavigation.main.viewmodel.DetailViewModel" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.view.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey">

            <TextView
                android:id="@+id/name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/city"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/population_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/curr_population"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_detail" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/population_detail"
                app:layout_constraintWidth_percent="0.85" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_detail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:elevation="2dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@id/cardView_detail"
                app:layout_constraintStart_toStartOf="@id/cardView_detail"
                app:layout_constraintTop_toTopOf="@id/cardView_detail"
                app:shapeAppearanceOverlay="@style/RoundedSquare" />

            <TextView
                android:id="@+id/description_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:elevation="2dp"
                android:gravity="center_horizontal"
                android:text="@string/city_detail"
                app:layout_constraintEnd_toEndOf="@id/cardView_detail"
                app:layout_constraintStart_toStartOf="@id/cardView_detail"
                app:layout_constraintTop_toBottomOf="@id/image_detail" />

            <Button
                android:id="@+id/button_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_button"
                android:text="@string/haritada_goruntule"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/cardView_detail"
                app:layout_constraintStart_toStartOf="@id/cardView_detail"
                app:layout_constraintTop_toBottomOf="@id/description_detail" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>